final proyecto en python

--- a/R-Clases/week-3/01_ProyectoPython/python_colab_notebook/02_telco_challenge_modeling.ipynb
+++ b/R-Clases/week-3/01_ProyectoPython/python_colab_notebook/02_telco_challenge_modeling.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "173845a8",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "1afa1f14",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "fb9c412a",
    "metadata": {},
    "outputs": [],
@@ -190,18 +190,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "8787cdec",
    "metadata": {},
    "outputs": [],
    "source": [
     "churn_objetct = ChurnDatabase(\"../database/telco_customer_churn.sqlite.db\")\n",
     "churn = churn_objetct.get_churn_analysis_data()\n",
+    "\n",
     "churn[['gender', 'SeniorCitizen', 'Partner', 'Dependents', 'tenure',\n",
     "       'PhoneService', 'MultipleLines', 'InternetService', 'OnlineSecurity',\n",
     "       'OnlineBackup', 'DeviceProtection', 'TechSupport', 'StreamingTV',\n",
     "       'StreamingMovies', 'Contract', 'PaperlessBilling', 'PaymentMethod',\n",
-    "       'MonthlyCharges', 'TotalCharges']][churn[\"Churn\"] == 1].head().to_csv(\"test.csv\")"
+    "       'MonthlyCharges', 'TotalCharges']][churn[\"Churn\"] == 1].sample(10).to_csv(\"test.csv\")"
    ]
   },
   {
@@ -324,8 +325,8 @@
     "    # --- Pipeline ---\n",
     "    pipe = ImbPipeline(steps=steps)\n",
     "    \n",
-    "        # --- Cross-validation ---\n",
-    "    skf = StratifiedKFold(n_splits=10, shuffle=True, random_state=42)\n",
+    "    # --- Cross-validation ---\n",
+    "    skf = StratifiedKFold(n_splits=20, shuffle=True, random_state=42)\n",
     "    \n",
     "    scores = cross_validate(\n",
     "        pipe,\n",
@@ -338,7 +339,9 @@
     "    \n",
     "    # --- Calcular medias ---\n",
     "    mean_scores = {key: np.mean(val) for key, val in scores.items()}\n",
+    "    # print(pd.DataFrame(mean_scores).T)\n",
     "    \n",
+    "\n",
     "    print(\"Media de scores CV \")\n",
     "    for key, val in mean_scores.items():\n",
     "        print(f\"{key}: {val:.4f}\")\n",
@@ -474,12 +477,12 @@
     "\n",
     "# Primero separamos train+val vs test (20% para test)\n",
     "X_train_val, X_test, y_train_val, y_test = train_test_split(\n",
-    "    X, y, test_size=0.2, random_state=42, stratify=y\n",
+    "    X, y, test_size=0.15, random_state=42, stratify=y\n",
     ")\n",
     "\n",
     "#  Luego de train+val, volvemos a separar: train (60%), val (20%)\n",
     "X_train, X_val, y_train, y_val = train_test_split(\n",
-    "    X_train_val, y_train_val, test_size=0.25, random_state=42, stratify=y_train_val\n",
+    "    X_train_val, y_train_val, test_size=0.18, random_state=42, stratify=y_train_val\n",
     ")\n",
     "# (0.25 de 0.8 = 0.20 → o sea: 60% train, 20% val, 20% test)\n",
     "\n",
@@ -488,7 +491,7 @@
     "print(\"Test:\", X_test.shape, y_test.shape)\n",
     "\n",
     "print(X_train.columns)\n",
-    "print(X_train.dtypes)\n"
+    "# print(X_train.dtypes)\n"
    ]
   },
   {
@@ -506,9 +509,8 @@
     "from sklearn.metrics import make_scorer, f1_score, recall_score, precision_score, roc_auc_score, average_precision_score\n",
     "from imblearn.pipeline import Pipeline\n",
     "from imblearn.combine import SMOTETomek\n",
-    "\n",
-    "# Definimos folds estratificados\n",
-    "cv = StratifiedKFold(n_splits=5, shuffle=True, random_state=42)\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
     "\n",
     "# Modelos baseline\n",
     "models = {\n",
@@ -517,7 +519,7 @@
     "        class_weight=\"balanced\",   # ajusta peso de clases\n",
     "        penalty=\"l2\",              # regularización L2 para evitar overfitting\n",
     "        C=0.1,                     # regularización más fuerte (menor C = más regularización)\n",
-    "        solver=\"liblinear\",        # bueno para datasets pequeños/medianos\n",
+    "        solver=\"newton-cg\",             # bueno para datasets pequeños/medianos\n",
     "        random_state=42\n",
     "    ),\n",
     "    \"Random Forest\": RandomForestClassifier(\n",
@@ -530,10 +532,26 @@
     "        bootstrap=True,\n",
     "        random_state=42\n",
     "    ),\n",
-    "    \"LightGBM\":LGBMClassifier(\n",
+    "    \"LightGBM\": LGBMClassifier(\n",
     "        random_state=42,\n",
     "        class_weight=\"balanced\",\n",
     "        n_estimators=100\n",
+    "    ),\n",
+    "    \"Decision Tree\": DecisionTreeClassifier(\n",
+    "        criterion=\"gini\",           # o \"entropy\"\n",
+    "        max_depth=6,                # limitar profundidad para evitar overfitting\n",
+    "        min_samples_split=20,       # mínimo de muestras para dividir un nodo\n",
+    "        min_samples_leaf=10,        # mínimo de muestras en una hoja\n",
+    "        class_weight=\"balanced\",    # ajusta pesos para clases desbalanceadas\n",
+    "        random_state=42\n",
+    "    ),\n",
+    "    \"SVM\": SVC(\n",
+    "        kernel=\"rbf\",              # \"linear\" si querés algo más interpretable\n",
+    "        C=1.0,                     # regularización (menor C = más regularización)\n",
+    "        gamma=\"scale\",             # controla influencia de cada punto\n",
+    "        class_weight=\"balanced\",   # ajusta pesos por clases desbalanceadas\n",
+    "        probability=True,          # para obtener probabilidades y usar ROC/AUC\n",
+    "        random_state=42\n",
     "    )\n",
     "}\n"
    ]
@@ -581,7 +599,7 @@
    "outputs": [],
    "source": [
     "def evaluate_metric_differences(eval_df: pd.DataFrame, test_df: pd.DataFrame):\n",
-    "    diff_df = eval_df.set_index(eval_df.index) - test_df.set_index(test_df.index)\n",
+    "    diff_df = abs(eval_df.set_index(eval_df.index) - test_df.set_index(test_df.index))\n",
     "    diff_df = diff_df.rename(columns=lambda c: f\"{c}_diff\")\n",
     "    return diff_df\n"
    ]
@@ -608,8 +626,7 @@
     "\n",
     "def plot_metric_differences(eval_df: pd.DataFrame, test_df: pd.DataFrame):\n",
     "    # Calculamos diferencias\n",
-    "    diff_df = eval_df.set_index(eval_df.index) - test_df.set_index(test_df.index)\n",
-    "    diff_df = diff_df.rename(columns=lambda c: f\"{c}_diff\")\n",
+    "    diff_df = evaluate_metric_differences(eval_df,test_df)\n",
     "    \n",
     "    # Convertimos a formato largo para Plotly\n",
     "    diff_long = diff_df.reset_index().melt(id_vars='index', var_name='Metric', value_name='Difference')\n",
@@ -809,8 +826,8 @@
     "    filepath = os.path.join(folder, _name)\n",
     "    joblib.dump(obj_to_save, filepath)\n",
     "\n",
-    "    print(f\"✅ Modelo guardado en {filepath} con scores: {scores}\")\n",
-    "    print(f\"📌 Columnas guardadas: {feature_names}\")\n",
+    "    print(f\"Modelo guardado en {filepath} con scores: {scores}\")\n",
+    "    print(f\"Columnas guardadas: {feature_names}\")\n",
     "    return scores\n"
    ]
   },
